--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,6 +1,6 @@
 .banner {
-    background: var(--azul-degrade);
-    color: var(--branco);
+    background: #8B0000;
+    color: #2F4F4F;
     text-align: center;
     padding: 2.5em 2em;
 }
