--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,5 +1,5 @@
 .banner {
-    background: #8B0000;
+    background: #B8860B;
     color: #2F4F4F;
     text-align: center;
     padding: 2.5em 2em;
