--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -21,7 +21,7 @@
 }
 
 .tópicos__link {
-    color: #663399;
+    color: #FFFFFF;
     padding: 1em;
     background-color: #808080;
     text-decoration: none;
